objects/PRF__c.object
<CustomObject>
    <fields>
        <fullName>Final_Decision_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Format__c</fullName>
        <label>Final Format (Email)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Output_Document__c</fullName>
        <label>Final Output Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Rate_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Finance Rate Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Rate_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Finance Rate Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstHelp_Nurse_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Additional Fees apply</inlineHelpText>
        <label>FirstHelp Nurse Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Self_Insured__c</fullName>
        <label>Fully Insured/Self-Insured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Self-Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Access_Report_Format__c</fullName>
        <label>Geo Access Report Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Medical</fullName>
                </value>
                <value>
                    <fullName>Standard Dental</fullName>
                </value>
                <value>
                    <fullName>Standard Vision</fullName>
                </value>
                <value>
                    <fullName>Standard Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantees__c</fullName>
        <label>Guarantees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headquarters_Address__c</fullName>
        <formula>Opportunity__r.Account.BillingStreet + " " + Opportunity__r.Account.BillingCity + " " + Opportunity__r.Account.BillingCountry + " " + Opportunity__r.Account.BillingState + " " + Opportunity__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headquarters Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Assessment__c</fullName>
        <inlineHelpText>Opt1: Health Assessment with Online Health Coaching.
Opt2: Health Assessment with Telephonic Health Advising, Online Health Coaching.
Opt3: Health Assessment with Telephonic Health Advising, Online Health Coaching, Telephonic Health Coaching.</inlineHelpText>
        <label>Program Offering</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carve In PCMH</fullName>
                </value>
                <value>
                    <fullName>Carve In TCCI</fullName>
                </value>
                <value>
                    <fullName>Carve In DM</fullName>
                </value>
                <value>
                    <fullName>Carve In Wellness</fullName>
                </value>
                <value>
                    <fullName>Carve Out PCHM</fullName>
                </value>
                <value>
                    <fullName>Carve Out TCCI</fullName>
                </value>
                <value>
                    <fullName>Carve Out DM</fullName>
                </value>
                <value>
                    <fullName>Carve Out Wellness</fullName>
                </value>
                <value>
                    <fullName>Additional Worksite Screening Options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthcare_Reform_Grandfather_Status__c</fullName>
        <label>Healthcare Reform Grandfather Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grandfathered</fullName>
                </value>
                <value>
                    <fullName>Non-Grandfathered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Many_CD_Label_Tab__c</fullName>
        <label>How Many (CD/Label/Tab)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Stop_Loss_Report_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Stop Loss Report Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Cost_Center__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Rep Cost Center</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Name__c</fullName>
        <formula>RFP_Name__r.Opportunity_Name__r.Lead_Rep_Name_User__r.FirstName  + ' ' +  RFP_Name__r.Opportunity_Name__r.Lead_Rep_Name_User__r.LastName

/*RFP_Name__r.Opportunity_Name__r.Lead_Rep_Name_User__c*/</formula>
        <label>Lead Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magellan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magellan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_Original__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark Original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Policy_Covered_Person_1M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max./Policy/Covered Person - $1M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Policy_Covered_Person_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Max./Policy/Covered Person - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Disruption_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Disruption Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Disruption_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Disruption Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Geo_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Geo Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Geo_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Geo Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Networks_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List other BCBS Medical Networks</inlineHelpText>
        <label>Medical Networks - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Networks__c</fullName>
        <inlineHelpText>Alternative Network = List BCBS Networks in the "Other" field. 
CareFirst BlueChoice Advantage = CareFirst BlueChoice and PPO BlueCard</inlineHelpText>
        <label>Medical Networks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPO with Blue Card</fullName>
                </value>
                <value>
                    <fullName>Regional Preferred</fullName>
                </value>
                <value>
                    <fullName>CareFirst BlueChoice Advantage</fullName>
                </value>
                <value>
                    <fullName>CareFirst BlueChoice</fullName>
                </value>
                <value>
                    <fullName>Alternative Networks</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Products_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Special Product requests</inlineHelpText>
        <label>Medical Products - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Products__c</fullName>
        <label>Medical Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BC Advantage</fullName>
                </value>
                <value>
                    <fullName>BC HMO</fullName>
                </value>
                <value>
                    <fullName>BC HMO OA</fullName>
                </value>
                <value>
                    <fullName>BC OO OA</fullName>
                </value>
                <value>
                    <fullName>BC OOP OA</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred</fullName>
                </value>
                <value>
                    <fullName>CDH</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>HB 2.0</fullName>
                </value>
                <value>
                    <fullName>HB Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Supp</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Triple Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members_in_CF_Service_Area__c</fullName>
        <label>Members in CF Service Area</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NCAS_Fee__c</fullName>
        <label>NCAS Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Census_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Census File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_an_Electronic_Cover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need an Electronic Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Access_Request__c</fullName>
        <label>Network Access Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADA Code Analysis</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>CPT Code Analysis</fullName>
                </value>
                <value>
                    <fullName>Disruption</fullName>
                </value>
                <value>
                    <fullName>GeoAccess</fullName>
                </value>
                <value>
                    <fullName>State Match</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Title_Reg_HMO_POS_Network_Prov__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Title (Reg HMO/POS Network Prov)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Network_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Bid_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>No Bid Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Standard Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Copies_Requested__c</fullName>
        <label>Number of Copies Requested</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Eligible_Employees__c</fullName>
        <formula>RFP_Name__r.Opportunity_Name__r.Account.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Screenings_Addl_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>On-Site Screenings Add'l Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Site_Screenings_Fully_Insured_200__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On-Site Screenings Fully Insured 200+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposal Request Forms</relationshipLabel>
        <relationshipName>Proposal_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Bid_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Delivery_Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Delivery Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Employee_Groupings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Employee Groupings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Services_Proposing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Services Proposing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCMH_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCMH - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCMH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCMH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Page Instructions</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Par_Plan_CFA_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Par Plan CFA Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Par_Plan_CFA_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Par Plan CFA Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantees__c</fullName>
        <label>Performance Guarantees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Design_Confirmation_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Design Confirmation Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Design_Confirmation_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Design Confirmation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Contracts__c</fullName>
        <formula>/* Begin Change TPB 06/05/12 */

RFP_Name__r.Opportunity_Name__r.Potential_Contracts__c

/* RFP_Name__r.Opportunity_Name__r.Test_Total_Contracts__c */

/* End Change TPB 06/05/12 */</formula>
        <label>Potential Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presc_Rx_Addt_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Prescription Drug Additional Information</inlineHelpText>
        <label>Presc. Rx Addt'l Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prescription_Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescription Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Jurisdiction_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product/Jurisdiction(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Logo_s__c</fullName>
        <label>Product/Logo(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CareFirst BlueChoice</fullName>
                </value>
                <value>
                    <fullName>CFA</fullName>
                </value>
                <value>
                    <fullName>CFMI</fullName>
                </value>
                <value>
                    <fullName>GHMSI</fullName>
                </value>
                <value>
                    <fullName>NCAS</fullName>
                </value>
                <value>
                    <fullName>TDN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Difficulty__c</fullName>
        <label>Project Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01=extreme</fullName>
                </value>
                <value>
                    <fullName>02=high impact</fullName>
                </value>
                <value>
                    <fullName>03=medium impact</fullName>
                </value>
                <value>
                    <fullName>04=low impact</fullName>
                </value>
                <value>
                    <fullName>05=minimal impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Only</fullName>
                </value>
                <value>
                    <fullName>Admin with Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Finalist New</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>RFI Existing</fullName>
                </value>
                <value>
                    <fullName>RFI Existing Follow-up</fullName>
                </value>
                <value>
                    <fullName>RFI New</fullName>
                </value>
                <value>
                    <fullName>RFI New Follow-up</fullName>
                </value>
                <value>
                    <fullName>RFI-Questionnaire (No Rates)</fullName>
                </value>
                <value>
                    <fullName>RFP New</fullName>
                </value>
                <value>
                    <fullName>RFP New Follow-up</fullName>
                </value>
                <value>
                    <fullName>Standard RFP Existing</fullName>
                </value>
                <value>
                    <fullName>Standard RFP New</fullName>
                </value>
                <value>
                    <fullName>Survey Consortium</fullName>
                </value>
                <value>
                    <fullName>Survey Consortium Follow-up</fullName>
                </value>
                <value>
                    <fullName>Survey Non-Consortium</fullName>
                </value>
                <value>
                    <fullName>Survey Non-Consortium Follow-up</fullName>
                </value>
                <value>
                    <fullName>Admin and Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Admin Only (Quote)</fullName>
                </value>
                <value>
                    <fullName>Finalist Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Coordinators__c</fullName>
        <label>Proposal Coordinators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>David Rathert</fullName>
                </value>
                <value>
                    <fullName>Diane Bowers</fullName>
                </value>
                <value>
                    <fullName>Doris Doyle</fullName>
                </value>
                <value>
                    <fullName>Jenny Sargent</fullName>
                </value>
                <value>
                    <fullName>Jessica Hartom</fullName>
                </value>
                <value>
                    <fullName>Kim Milby</fullName>
                </value>
                <value>
                    <fullName>Kim Zellers</fullName>
                </value>
                <value>
                    <fullName>Maria Chauncey</fullName>
                </value>
                <value>
                    <fullName>Mike Myers</fullName>
                </value>
                <value>
                    <fullName>Twana Anderson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Funding_Arrangement__c</fullName>
        <label>Proposed Funding Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Self Insured</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Actual_Receipt_Date__c</fullName>
        <formula>RFP_Name__r.Opportunity_Name__r.RFP_Actual_Receipt_Date__c</formula>
        <label>RFP Actual Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Dept_Recpt_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Dept. Recpt. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Name</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>Proposal Request Forms</relationshipLabel>
        <relationshipName>Proposal_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Number__c</fullName>
        <label>RFP Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Shopping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Shopping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Req_Agg_Basis_of_Coverage_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Req. Agg.  Basis of Coverage Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_Agg_Basis_of_Coverage__c</fullName>
        <label>Req. Agg. Basis of Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Req_Agg_Co_Ins_Factor_100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Req. Agg. Co-Ins. Factor 100 %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req_Agg_Excess_Loss_Coverage__c</fullName>
        <label>Req. Agg. Excess  Loss Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Margin Excess of Expected Claims 125%</fullName>
                </value>
                <value>
                    <fullName>Limit of Liability $1M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Req_Agg_Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Req. Agg. Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req_Alternate_Ded__c</fullName>
        <label>Req. Alternate Ded.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Req_Co_Ins_Factor_100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Req. Co-Ins. Factor 100%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req_Commission_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Req. Commission Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_Commission__c</fullName>
        <label>Req. Commission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 % of SL Prem.</fullName>
                </value>
                <value>
                    <fullName>15 % of SL Prem.</fullName>
                </value>
                <value>
                    <fullName>Net of Commission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Req_Max_Policy_Covered_Person_1M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Req. Max./Policy/Covered Person - $1M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req_Max_Policy_Covered_Person_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Req. Max./Policy/Covered Person- Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_Other_Options__c</fullName>
        <label>Req. Other Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family Specific</fullName>
                </value>
                <value>
                    <fullName>Aggregating Specific</fullName>
                </value>
                <value>
                    <fullName>2 Year Rate Guarantee</fullName>
                </value>
                <value>
                    <fullName>Advance Funding</fullName>
                </value>
                <value>
                    <fullName>Terminal Liability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Req_Spec_Basis_of_Coverage_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Req. Spec. Basis of Coverage Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_Spec_Basis_of_Coverage__c</fullName>
        <label>Req. Spec. Basis of Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Req_Spec_Ded_Policy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Req. Spec Ded./Policy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Req_Spec_Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Req.  Spec Rx</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>